--- a/Commander/appsettings.json
+++ b/Commander/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
-}
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CommanderConnection": "Server=localhost;Initial Catalog=CommanderDB;Integrated Security=True;"
+  }
+  }
